#32137 : ELECTION : grouper par OS